--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.3",
-    "@angular/cdk": "^18.2.14",
     "@angular/common": "^18.0.3",
     "@angular/compiler": "^18.0.3",
     "@angular/core": "^18.0.3",
@@ -19,7 +17,10 @@
     "@angular/platform-browser": "^18.0.3",
     "@angular/platform-browser-dynamic": "^18.0.3",
     "@angular/router": "^18.0.3",
-    "@swimlane/ngx-charts": "^22.0.0",
+    "@angular/animations": "^18.0.3",
+    "@swimlane/ngx-charts": "^21.0.0",
+    "lucide": "^0.523.0",
+    "lucide-angular": "^0.523.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
